fixed alignment issues by adding width to flex items

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
 
 main {
     height:100%;
-    margin: 0rem 5rem 5rem;
+    margin: 0rem 5rem;
 
 }
 
@@ -62,7 +62,7 @@ a {
 h2 {
     display:flex;
     justify-content: center;
-    margin-top:4rem;
+    margin:4rem 0rem;
 }
 
 
@@ -125,7 +125,7 @@ li {
 
 #products {
     display:flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     column-gap:3rem;
     align-items: stretch;
 }
@@ -135,13 +135,15 @@ li {
     border:1px solid white;
     padding:3rem;
     background-color: rgba(176, 41, 39, 0.8);
-    
+    width:100%;
 }
 
 .tierpic {
     width:100%;
-    max-height:20fr;
+    height:50%;
     opacity:0.5;
+    border-radius:5%;
+    overflow:hidden;
 }
 
 .tierpic:hover {
